Remove jenkins_agent.py and jenkins_mcp_example.py files; refactor jenkins_mcp_server.py to use FastMCP instead of Pydantic-ai, updating the server context and tool registration. Update README to reflect changes in architecture and usage instructions. Modify requirements.txt to include necessary dependencies for FastMCP.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-pydantic-ai>=0.0.14
+aiohttp>=3.8.0
+python-dotenv>=0.19.0
+pydantic>=2.0.0
+pydantic-ai>=0.0.1
+mcp>=1.9.2
 httpx>=0.25.0
-anyio>=4.0.0
-python-dotenv>=1.0.0 
+anyio>=4.0.0 
